# maaltafels

./: .readthedocs.yaml  Makefile  Procfile  README.md  TODO.md  app.json  pyproject.toml  requirements.txt
.github/: README.md
.github/workflows/: test.yaml
maaltafels/: __init__.py  api.py  ui.py
maaltafels/static/: maaltafels.css  maaltafels.js  report.js
maaltafels/templates/: index.html  main.html  report.html
tests/: test_maaltafels.py
