[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maaltafels"
version = "1.2.1"
description = "Oefen maaltafels met opvolging"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aniso8601==9.0.1",
  "blinker==1.6.3",
  "click==8.1.7",
  "dnspython==2.4.2",
  "Flask==3.0.0",
  "Flask-RESTful==0.3.10",
  "gunicorn==21.2.0",
  "importlib-metadata==6.8.0",
  "itsdangerous==2.1.2",
  "Jinja2==3.1.2",
  "MarkupSafe==2.1.3",
  "packaging==23.2",
  "pymongo==4.5.0",
  "pytz==2023.3.post1",
  "six==1.16.0",
  "Werkzeug==3.0.1",
  "zipp==3.17.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
  "mypy>=1.13.0",
  "ruff>=0.8.0",
  "tox>=4.0.0",
  "tox-uv>=1.0.0",
  "build>=1.0.0",
]
docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=2.0.0",
  "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/christophevg/maaltafels"

[project.scripts]
maaltafels = "maaltafels:server"

[tool.hatch.build.targets.wheel]
packages = ["maaltafels"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
indent-width = 2

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["maaltafels"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["maaltafels"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[tool.tox]
env_list = ["py311", "py312"]

[tool.tox.env_run_base]
description = "run tests with pytest"
skip_install = false
commands_pre = [
  ["uv", "pip", "install", "-e", "."],
  ["uv", "pip", "install", "pytest", "pytest-cov", "pytest-asyncio"],
]
commands = [["pytest", "tests", "-v", "--cov=maaltafels", "--cov-report=term-missing"]]