[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maaltafels"
version = "1.2.1"
description = "Oefen maaltafels met opvolging"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aniso8601",
  "blinker",
  "click",
  "dnspython",
  "Flask",
  "Flask-RESTful",
  "gunicorn",
  "importlib-metadata",
  "itsdangerous",
  "Jinja2",
  "MarkupSafe",
  "packaging",
  "pymongo",
  "pytz",
  "six",
  "Werkzeug",
  "zipp",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "mypy",
  "ruff",
  "tox",
  "tox-uv",
  "build",
]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "myst-parser",
]

[project.urls]
Homepage = "https://github.com/christophevg/maaltafels"

[project.scripts]
maaltafels = "maaltafels:server"

[tool.hatch.build.targets.wheel]
packages = ["maaltafels"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
indent-width = 2

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["maaltafels"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["maaltafels"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[tool.tox]
env_list = ["py311", "py312"]

[tool.tox.env_run_base]
description = "run tests with pytest"
skip_install = false
commands_pre = [
  ["uv", "pip", "install", "-e", "."],
  ["uv", "pip", "install", "pytest", "pytest-cov", "pytest-asyncio"],
]
commands = [["pytest", "tests", "-v", "--cov=maaltafels", "--cov-report=term-missing"]]
